
#Country Ideas:#

Halved morale and discipline bonuses across the board.
Reduced infantry and cavalry power by about 1/3rd across the board.
The purpose of the above is to have slightly less of a gap between land committed nations and nations that don't go land. Prussia and Sweden are still OP, however.

############################
#        2) Policies       #
############################

The main goal with policies was to have policies be a nice 'bonus' for after you've thought about your NIs, instead of picking your NIs to achieve specific policies. There should be no overpowered policies and you should not find yourself min-maxing NIs to get certain policies.
There have been too many changes to mention them all, but a brief outline is given.
Policies can be retracted after 5 years, instead of 10.

#Administrative Policies:#

The main goal here was to reduce the 'costs' of things, with the special exception of Espionage + Quality giving +2.5% discipline

#Diplomatic Policies:#

Changed basically all of the diplomatic policies to align with how the NI now functions as a 'production' NI. 
Also nerfed the influence NIs slightly so vassals don't become stronger than players...

#Military Policies:#

The main goal here was to remove any +morale and +discipline policies from the usual offenders (religious + whatever, economic + whatever)

############################
#        3) Economic       #
############################

Each tech in military now increases maint cost by 3% instead of 1%. 
Wartaxes buffed to 33% maint decrease but only lasts 1 year.
Bankruptcy reduces morale by 50% instead of 100%. 
Increased interest when taking a loan. This is to stop loan farming for buildings and coming out ahead economically from doing so.
Vassals give more money to their overlord but also have internal economic buffs so they can keep up with siphoning more money.

############################
#       4) Military        #
############################
