@@ -673,7 +673,7 @@ NEconomy = {
 	WARTAXES_DURATION = 1,							-- _EDEF_WARTAXES_DURATION_
 	MINIMUM_INTERESTS = 0.25,						-- _EDEF_MINIMUM_INTERESTS_
 	BASE_INTERESTS = 6.0,							-- Base interests
-	LAND_MAINTENANCE_FACTOR = 0.25,					-- _EDEF_LAND_MAINTENANCE_FACTOR
+	LAND_MAINTENANCE_FACTOR = 0.175,					-- _EDEF_LAND_MAINTENANCE_FACTOR
 	HEAVY_SHIP_MAINT_FACTOR = 0.20,					-- _EDEF_HEAVY_SHIP_MAINT_FACTOR_
 	LIGHT_SHIP_MAINT_FACTOR = 0.03,					-- _EDEF_LIGHT_SHIP_MAINT_FACTOR_
 	GALLEY_MAINT_FACTOR = 0.04,						-- _EDEF_GALLEY_MAINT_FACTOR_
@@ -775,8 +775,8 @@ NMilitary = {
 	GALLEY_SPEED = 4.0, 							-- _MDEF_GALLEY_SPEED = 10,
 	TRANSPORT_SPEED = 6.0, 							-- _MDEF_TRANSPORT_SPEED = 10,
 	INFANTRY_COST = 16.0, 							-- _MDEF_INFANTRY_COST = 10,		
-	CAVALRY_COST = 30.0, 							-- _MDEF_CAVALRY_COST = 10,		
-	ARTILLERY_COST = 40.0, 							-- _MDEF_ARTILLERY_COST = 10,		
+	CAVALRY_COST = 24.0, 							-- _MDEF_CAVALRY_COST = 10,		
+	ARTILLERY_COST = 36.0, 							-- _MDEF_ARTILLERY_COST = 10,		
 	FORTRESS_COST = 1.0,							-- base fort cost
 	HEAVY_SHIP_COST = 75, 							-- _MDEF_HEAVY_SHIP_COST = 10,		
 	LIGHT_SHIP_COST = 35, 							-- _MDEF_LIGHT_SHIP_COST = 10,	
