@@ -120,7 +120,7 @@ innovativeness_ideas = {
 		technology_cost = -0.05
 	}
 	innovative_cannons = {
-		artillery_power = 0.2
+		artillery_power = 0.15
 	}
 	resilient_state = {
 		inflation_action_cost = -0.20
@@ -129,7 +129,7 @@ innovativeness_ideas = {
 		war_exhaustion = -0.05
 	}
 	free_thought = {
-		idea_cost = -0.15
+		idea_cost = -0.1
 	}
 
 	ai_will_do = {
@@ -204,7 +204,7 @@ spy_ideas = {
 	}		
 	privateers = {
 		embargo_efficiency = 0.25
-		privateer_efficiency = 0.33
+		privateer_efficiency = 0.15
 	}
 	rumourmongering = {
 		may_sabotage_reputation = yes
@@ -715,7 +715,7 @@ expansion_ideas = {
 
 	bonus = {
  		cb_on_overseas = yes
- 		state_maintenance_modifier = -0.25
+ 		state_maintenance_modifier = -0.33
 		diplomatic_upkeep = 1
 	}
 
@@ -796,7 +796,7 @@ administrative_ideas = {
 		prestige = 1
 	}
 	civil_servants = {
-		stability_cost_modifier = -0.30
+		stability_cost_modifier = -0.25
 	}
 
 	ai_will_do = {
@@ -817,10 +817,10 @@ humanist_ideas = {
 	}
 
 	tolerance_idea = {
-		religious_unity = 0.25
+		religious_unity = 0.30
 	}
 	local_traditions = {
-		global_unrest = -3
+		global_unrest = -2
 	}
 	ecumenism = {
 		ae_impact = -0.30
@@ -829,7 +829,7 @@ humanist_ideas = {
 		years_of_nationalism = -10
 	}
 	cultural_ties = {
-		accepted_culture_threshold = -0.5
+		accepted_culture_threshold = -0.65
 	}
 	benevolence = {
 		global_trade_goods_size_modifier = 0.15
