@@ -91,12 +91,12 @@ SWE_ideas = {
 
 RUS_ideas = {
 	start = {
-		global_manpower_modifier = 0.25
+		global_manpower_modifier = 0.15
 		infantry_cost = -0.20
 	}
 
 	bonus = {
-		global_manpower_modifier = 0.50
+		global_manpower_modifier = 0.30
 	}
 
 	trigger = {
@@ -111,7 +111,7 @@ RUS_ideas = {
 		core_creation = -0.15
 	}
 	the_streltsy = {
-		land_forcelimit_modifier = 0.50
+		land_forcelimit_modifier = 0.30
 	}
 	opprichnina = {
 		culture_conversion_cost = -0.2
@@ -267,7 +267,7 @@ DAN_ideas = {
 FRA_ideas = {
 	start = {
 		diplomatic_reputation = 1
-		global_manpower_modifier = 0.20
+		global_manpower_modifier = 0.15
 	}
 	
 	bonus = {
@@ -313,7 +313,7 @@ TUR_ideas = {
 	}
 	
 	bonus = {
-		land_forcelimit_modifier = 0.33
+		land_forcelimit_modifier = 0.20
 	}
 
 	trigger = {
@@ -422,7 +422,7 @@ PRU_ideas = {
 		infantry_power = 0.15
 	}
 	regimental_cantons = {
-		global_manpower_modifier = 0.25
+		global_manpower_modifier = 0.175
 		global_regiment_recruit_speed = -0.10
 	}
 	religious_toleration = {
@@ -497,7 +497,7 @@ POL_ideas = {
 		stability_cost_modifier = -0.1
 	}
 	peichota_wybraniecka = {
-		global_manpower_modifier = 0.25
+		global_manpower_modifier = 0.20
 		infantry_power = 0.075
 	}
 	winged_hussars = {
@@ -721,7 +721,7 @@ BUR_Ideas = {
 		tolerance_heretic = 2
 	}
 	bur_regimental_system = {
-		global_manpower_modifier = 0.25
+		global_manpower_modifier = 0.2
 	}
 }
 
@@ -770,7 +770,7 @@ GEN_Ideas = {
 SCO_Ideas = {
 	start = {
 		leader_land_shock = 1
-		land_forcelimit_modifier = 0.33
+		land_forcelimit_modifier = 0.20
 	}
 	
 	bonus = {
@@ -1129,7 +1129,7 @@ MLO_ideas = {
 	}
 	
 	bonus = {
-		global_manpower_modifier = 0.20
+		global_manpower_modifier = 0.15
 	}
 	
 	trigger = {
@@ -1467,7 +1467,7 @@ ITA_ideas = {
 		galley_power = 0.20
 	}
 	office_of_censor = {
-		global_manpower_modifier = 0.33
+		global_manpower_modifier = 0.25
 	}
 	italian_tax_reform = {
 		global_tax_modifier = 0.15
@@ -1595,7 +1595,7 @@ NOV_ideas = {
 		global_trade_power = 0.05
 	}
 	grand_dukes_army = {
-		global_manpower_modifier = 0.20
+		global_manpower_modifier = 0.15
 	}
 	exploration_tradition = {
 		navy_tradition = 1
@@ -1609,7 +1609,7 @@ NOV_ideas = {
 
 ETH_ideas = {
 	start = {
-		global_manpower_modifier = 0.20
+		global_manpower_modifier = 0.15
 		land_attrition = -0.10
 	}
 	
@@ -1676,7 +1676,7 @@ DAI_ideas = {
 		defensiveness = 0.2
 	}
 	village_militia = {
-		global_manpower_modifier = 0.25
+		global_manpower_modifier = 0.2
 	}
 	don_dien = {
 		core_creation = -0.10
@@ -1880,7 +1880,7 @@ TAU_ideas = {
 		prestige = 1
 	}
 	mandala_system = {
-		global_manpower_modifier = 0.2
+		global_manpower_modifier = 0.15
 	}
 	nat_worship = {
 		religious_unity = 0.2
@@ -2082,7 +2082,7 @@ PUN_ideas = {
 		production_efficiency = 0.15
 	}
 	foundation_of_the_khalsa = { 							
-		global_manpower_modifier = 0.2
+		global_manpower_modifier = 0.15
 	}
 	gurmukhi_script = {
 		stability_cost_modifier = -0.1
@@ -2254,7 +2254,7 @@ TUS_ideas = {
 		production_efficiency = 0.10
 	}
 	tuscan_grand_duchy = {
-		global_manpower_modifier = 0.25
+		global_manpower_modifier = 0.2
  	}
 }
 
@@ -2496,7 +2496,7 @@ HED_ideas = {
 
 NPL_ideas = {
 	start = {
-		land_forcelimit_modifier = 0.25
+		land_forcelimit_modifier = 0.15
 		manpower_recovery_speed = 0.15		
 	}
 	
@@ -2559,7 +2559,7 @@ KNI_ideas = {
 	}
 	reconquista_of_the_sea = {
 		galley_power = 0.2
-		privateer_efficiency = 0.25
+		privateer_efficiency = 0.15
 	}
 	ecumenical_defenders_of_christendom = {
 		global_unrest = -2
@@ -2717,7 +2717,7 @@ IRO_ideas = {
 		war_exhaustion_cost = -0.15
 	}
 	keepers_of_the_western_door = {
-		global_manpower_modifier = 0.25
+		global_manpower_modifier = 0.2
 	}
 	keepers_of_the_eastern_door = {
 		global_own_trade_power = 0.25
@@ -2741,7 +2741,7 @@ IRO_ideas = {
 
 CHICK_ideas = {
 	start = {
-		land_forcelimit_modifier = 0.25
+		land_forcelimit_modifier = 0.15
 		war_exhaustion_cost = -0.15
 	}
 	
@@ -2804,7 +2804,7 @@ CHE_ideas = {
 		stability_cost_modifier = -0.1
 	}
 	red_chiefs = {
-		global_manpower_modifier = 0.20
+		global_manpower_modifier = 0.15
 	}
 	cherokee_adaptability = {
 		idea_cost = -0.10
@@ -2894,7 +2894,7 @@ SHA_ideas = {
 		diplomats = 1
 	}
 	private_war_parties = {
-		global_manpower_modifier = 0.20
+		global_manpower_modifier = 0.15
 
 	}
 }
@@ -2928,7 +2928,7 @@ CRE_ideas = {
 		prestige = 1
 	}
 	micos_leadership = {
-		global_manpower_modifier = 0.15
+		global_manpower_modifier = 0.1
 	}
 	muscogee_neutrality = {
 		diplomatic_reputation = 1
@@ -3200,7 +3200,7 @@ AFG_ideas = {
 		defensiveness = 0.25
 	}
 	tureh = {
-		global_manpower_modifier = 0.2
+		global_manpower_modifier = 0.15
 	}
 	afghan_diaspora = {
 		diplomatic_reputation = 1
@@ -3250,7 +3250,7 @@ WAL_ideas = {
 		legitimacy = 1
 	}
 	abolition_of_serfdom = {
-		global_manpower_modifier = 0.2
+		global_manpower_modifier = 0.15
 	}
 }
 
@@ -3375,7 +3375,7 @@ AZT_ideas = {
 	}
 
 	bonus = {
-		global_manpower_modifier = 0.25
+		global_manpower_modifier = 0.2
 	}
 	
 	trigger = {
@@ -3425,7 +3425,7 @@ DAH_ideas = {
 		legitimacy = 1
 	}
 	slave_hunts = {
-		global_manpower_modifier = 0.15
+		global_manpower_modifier = 0.1
 	}
 	migan_and_mehu = {
 		stability_cost_modifier = -0.1
@@ -3700,8 +3700,8 @@ RYA_ideas = {
 	free = yes
 	
 	arsenal_of_ryazan = {
-		land_forcelimit_modifier = 0.25
-		global_manpower_modifier = 0.15
+		land_forcelimit_modifier = 0.15
+		global_manpower_modifier = 0.1
 	}
 	tatar_mercenaries = {
 		cavalry_cost = -0.1
@@ -3726,7 +3726,7 @@ RYA_ideas = {
 
 TVE_ideas = {
 	start = {
-		land_forcelimit_modifier = 0.2
+		land_forcelimit_modifier = 0.15
 		global_prov_trade_power_modifier = 0.15		
 	}
 	
@@ -3758,7 +3758,7 @@ TVE_ideas = {
 		infantry_power = 0.075
 	}
 	tve_national_army = {
-		global_manpower_modifier = 0.33
+		global_manpower_modifier = 0.25
 	}
 }
 
@@ -3939,7 +3939,7 @@ MOL_ideas = {
 		manpower_recovery_speed = 0.15
 	}
 	upper_boyars = {
-		land_forcelimit_modifier = 0.25
+		land_forcelimit_modifier = 0.15
 	}
 	moldavia_hospodar = {
 		legitimacy = 1
@@ -4131,7 +4131,7 @@ TAR_ideas = {
 	}
 
 	otomi_settlements= {
-		global_manpower_modifier = 0.15
+		global_manpower_modifier = 0.1
 	}
 	
 	tarascan_assmilation = { 
@@ -4196,7 +4196,7 @@ MON_ideas = {
 	free = yes
 	
 	mon_idea_1 = {
-		legitimacy = 1	
+		prestige = 1	
 	}
 	mon_idea_2 = {
 		tolerance_own = 1		
@@ -4215,7 +4215,7 @@ MON_ideas = {
 		global_tax_modifier = 0.1
 	}
 	mon_idea_7 = {
-		global_manpower_modifier = 0.15
+		global_manpower_modifier = 0.1
 	}
 }
 
@@ -4389,7 +4389,7 @@ ALB_ideas = {
 	free = yes
 	
 	all_lands_under_skanderbeg = {
-		land_forcelimit_modifier = 0.2
+		land_forcelimit_modifier = 0.15
 	}
 	land_of_ambushers = {
 		leader_land_manuever = 1		
@@ -4408,7 +4408,7 @@ ALB_ideas = {
 		tolerance_heathen = 1		
 	}
 	break_the_princes = {
-		global_manpower_modifier = 0.15
+		global_manpower_modifier = 0.1
 	}
 }
 
@@ -4485,7 +4485,7 @@ PRM_ideas = {
 		religious_unity = 0.25
 	}
 	permian_army_reform = {
-		land_forcelimit_modifier = 0.25
+		land_forcelimit_modifier = 0.15
 	}
 }
 
@@ -4517,7 +4517,7 @@ ASH_ideas = {
 		legitimacy = 1
 	}
 	ash_idea_5 = {
-		global_manpower_modifier = 0.15
+		global_manpower_modifier = 0.1
 	}
 	ash_idea_6 = {
 		global_tax_modifier = 0.10
@@ -4568,7 +4568,7 @@ MPC_ideas = {
 INC_ideas = {
 	start = {
 		idea_cost = -0.1
-		land_forcelimit_modifier = 0.2
+		land_forcelimit_modifier = 0.15
 	}
 	bonus = {
 		free_leader_pool = 1
@@ -4668,7 +4668,7 @@ MCA_ideas = {
 		army_tradition = 0.5
 	}
 	mca_idea_4 = {
-		global_manpower_modifier = 0.15
+		global_manpower_modifier = 0.1
 	}
 	mca_idea_5 = {
 		global_tax_modifier = 0.10
@@ -4861,7 +4861,7 @@ NAX_ideas = {
 	}
 	archipelago_of_opportunities = {
 		embargo_efficiency = 0.1	
-		privateer_efficiency = 0.25
+		privateer_efficiency = 0.15
 	}
 	legacy_of_crusaders = {
 		army_tradition = 0.5
@@ -4911,7 +4911,7 @@ TUA_ideas = {
 		trade_efficiency = 0.1
 	}
 	ge_unite_the_tribes = {
-		global_manpower_modifier = 0.15
+		global_manpower_modifier = 0.1
 	}
 }
 
@@ -4982,7 +4982,7 @@ KAZ_ideas = {
 		cavalry_power = 0.15
 	}
 	kaz_idea_4 = {
-		global_manpower_modifier = 0.25	
+		global_manpower_modifier = 0.2
 	}
 	kaz_idea_5 = {
 		leader_land_manuever = 1
@@ -5041,7 +5041,7 @@ WLS_ideas = {
 	}
 
 	bonus = {
-		land_forcelimit_modifier = 0.25
+		land_forcelimit_modifier = 0.15
 	}
 	
 	trigger = {
@@ -5247,7 +5247,7 @@ LXA_ideas = {
 	}
 	
 	bonus = {
-		land_forcelimit_modifier = 0.2
+		land_forcelimit_modifier = 0.15
 	}
 	
 	trigger = {
@@ -5480,7 +5480,7 @@ jerusalem_ideas = {
 	}
 	
 	bonus = {
-		global_manpower_modifier = 0.25
+		global_manpower_modifier = 0.2
 	}
 	
 	trigger = {
@@ -5754,7 +5754,7 @@ SUK_ideas = {
 	}
 	
 	bonus = {
-		land_forcelimit_modifier = 0.25
+		land_forcelimit_modifier = 0.15
 	}
 	
 	trigger = {
@@ -6120,7 +6120,7 @@ HES_ideas = {
 		discipline = 0.025
 	}
 	hessian_mercenaries_idea = {
-		land_forcelimit_modifier = 0.25
+		land_forcelimit_modifier = 0.15
 	}
 	hessian_economic_reforms = {
 		production_efficiency = 0.1
@@ -6817,7 +6817,7 @@ BAL_ideas = {
 	}
 
 	bonus = {
-		land_forcelimit_modifier = 0.2
+		land_forcelimit_modifier = 0.15
 	}
 	
 	trigger = {
@@ -7234,7 +7234,7 @@ SMI_ideas = {
 
 MAZ_ideas = {
     start = {
-		land_forcelimit_modifier = 0.2
+		land_forcelimit_modifier = 0.15
 		cavalry_power = 0.075
     }
 
@@ -7547,7 +7547,7 @@ ROM_ideas = {
 	}
 	
 	bonus = {
-		global_manpower_modifier = 0.33
+		global_manpower_modifier = 0.25
 	}
 	
 	trigger = {
@@ -7598,7 +7598,7 @@ MNS_ideas = {
 		diplomatic_reputation = 1  
 	}
 	mns_subdue_the_clans = {
-		land_forcelimit_modifier = 0.2
+		land_forcelimit_modifier = 0.15
 	}
 	mns_cios_dubh = {
 		global_tax_modifier = 0.15	  
@@ -7967,7 +7967,7 @@ RZW_ideas = {
 DMS_ideas = {
 	start = {  
 		garrison_size = 0.25  
-		global_manpower_modifier = 0.25
+		global_manpower_modifier = 0.2
 	}
   
 	bonus = {
