@@ -950,7 +950,7 @@ multilingual_diplomats = {
 		full_idea_group = diplomatic_ideas
 	}	
 	
-	accepted_culture_threshold = -0.15
+	accepted_culture_threshold = -0.1
 	
 	ai_will_do = {
 		factor = 1
